--- a/updatedPortfolio/src/components/Grid.module.css
+++ b/updatedPortfolio/src/components/Grid.module.css
@@ -14,6 +14,7 @@
     border: 2px solid white;
     border-radius: 12px;
     transition: background-color 0.3s ease;
+    cursor: pointer;
   }
   
   .my_button:active {
