--- a/updatedPortfolio/src/components/BigGrid.module.css
+++ b/updatedPortfolio/src/components/BigGrid.module.css
@@ -1,9 +1,30 @@
 
 .card_img{
-    border: 2px solid transparent;
+    border: 2px solid white;
+    padding: 3px;
+    border-radius: 6px;
 }
 
 .card_img:hover{
-    border: 3px solid rgb(162, 143, 172);
-
+    border: 2px solid transparent;
+    border-radius: 6px;
+    padding: 3px;
+    opacity: 0;
+}
+.card_overlay_img{
+    border: 2px solid transparent;
+    border-radius: 6px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    padding: 3px;
+    transform: translate(-50%, -50%);;
+    opacity: 0;
+}
+.card_overlay_img:hover{
+    border: 3px solid white;
+    padding: 2px;
+transition: opacity 0.2s ease;
+    border-radius: 6px;
+    opacity: 1;
 }
